--- a/cv/style/styles.css
+++ b/cv/style/styles.css
@@ -13,7 +13,6 @@ body {
     height: 100%;
     fill: darkslategrey; 
     z-index: -1; 
-    height: 100%;
 }
 
 header {
@@ -74,3 +73,25 @@ ul li {
     margin-bottom: 10px;
 }
 
+@media (max-width: 768px) {
+    header {
+        padding: 30px; 
+    }
+
+    header img {
+        width: 100px; 
+        height: 120px;
+    }
+
+    h1 {
+        font-size: 2em; 
+    }
+
+    h2 {
+        font-size: 1.2em; 
+    }
+
+    section {
+        padding: 10px; 
+    }
+}
