--- a/style/styles.css
+++ b/style/styles.css
@@ -17,7 +17,7 @@ body {
 
 header {
     position: relative; 
-    text-align: center;
+    text-align: center; 
     padding: 65px;
     color: white;
     margin: auto;
@@ -26,7 +26,7 @@ header {
 
 header img {
     width: 150px; 
-    height: 190px; 
+    height: auto; 
     border-radius: 50%; 
     margin: 5px; 
 }
@@ -73,25 +73,28 @@ ul li {
     margin-bottom: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
+   
     header {
-        padding: 30px; 
+        text-align: center;
     }
 
-    header img {
-        width: 100px; 
-        height: 120px;
+    .header-wave {
+        display: none; 
+    }
+
+    img {
+        max-width: 80%; 
+        margin: 20px auto; 
     }
 
     h1 {
-        font-size: 2em; 
+        color:darkslategrey;
+        font-size: 24px; 
     }
 
-    h2 {
-        font-size: 1.2em; 
-    }
-
-    section {
-        padding: 10px; 
+    p {
+        color:darkslategrey;
+        font-size: 14px; 
     }
 }
